--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,11 @@
 click==8.0.1; python_version >= '3.6'
 flask-sqlalchemy==2.5.1
 flask==2.0.1
-greenlet==1.1.1; python_version >= '3' and platform_machine in 'x86_64 X86_64 aarch64 AARCH64 ppc64le PPC64LE amd64 AMD64 win32 WIN32'
+greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
+gunicorn==20.1.0
 itsdangerous==2.0.1; python_version >= '3.6'
 jinja2==3.0.1; python_version >= '3.6'
 markupsafe==2.0.1; python_version >= '3.6'
 pymysql==1.0.2
-sqlalchemy==1.4.23; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+sqlalchemy==1.4.25; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 werkzeug==2.0.1; python_version >= '3.6'
