--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 #
 
 -i https://pypi.org/simple
+autopep8==1.5.7
 click==8.0.3; python_version >= '3.6'
 flask-cors==3.0.10
 flask-sqlalchemy==2.5.1
@@ -15,8 +16,10 @@ gunicorn==20.1.0
 itsdangerous==2.0.1; python_version >= '3.6'
 jinja2==3.0.2; python_version >= '3.6'
 markupsafe==2.0.1; python_version >= '3.6'
+pycodestyle==2.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pymysql==1.0.2
 python-dotenv==0.19.1
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.25; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 werkzeug==2.0.2; python_version >= '3.6'
