--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@
 
 -i https://pypi.org/simple
 autopep8==1.5.7
+cachelib==0.4.1; python_version >= '3.6'
 click==8.0.3
 flask-cors==3.0.10
+flask-session==0.4.0
 flask-sqlalchemy==2.5.1
 flask==2.0.2
 greenlet==1.1.2
